// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ExpandedIndividual Default 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <td
      colspan="3"
    >
      <div
        class="v-subheader theme--light"
      >
        Identities (4)
      </div>
       
      <div
        class="v-list indented v-sheet v-sheet--tile theme--light"
        role="list"
      >
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-github theme--light"
            />
          </div>
           
          <div
            class="v-list-item__content"
          >
            <div
              class="row no-gutters"
            >
              <div
                class="col col-2"
              >
                <span
                  class="text-center v-chip v-chip--no-color v-chip--outlined theme--light v-size--default"
                  tile=""
                >
                  <span
                    class="v-chip__content"
                  >
                    
      006afa
    
                  </span>
                </span>
              </div>
               
              <div
                class="ma-2 text-center col"
              >
                <span>
                  Tom Marvolo Riddle
                </span>
              </div>
               
              <div
                class="ma-2 text-center col"
              >
                <span>
                  triddle@example.net
                </span>
              </div>
               
              <div
                class="ma-2 text-center col"
              >
                <span>
                  triddle
                </span>
              </div>
               
              <div
                class="ma-2 text-center col"
              >
                <span>
                  GitHub
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__action"
          />
           
          <div
            class="v-list-item__content"
          >
            <div
              class="row no-gutters"
            >
              <div
                class="col col-2"
              >
                <span
                  class="text-center v-chip v-chip--no-color v-chip--outlined theme--light v-size--default"
                  tile=""
                >
                  <span
                    class="v-chip__content"
                  >
                    
      808b18
    
                  </span>
                </span>
              </div>
               
              <div
                class="ma-2 text-center col"
              >
                <span>
                  Voldemort
                </span>
              </div>
               
              <div
                class="ma-2 text-center col"
              >
                <span>
                  -
                </span>
              </div>
               
              <div
                class="ma-2 text-center col"
              >
                <span>
                  voldemort
                </span>
              </div>
               
              <div
                class="ma-2 text-center col"
              >
                <span>
                  GitHub
                </span>
              </div>
            </div>
          </div>
        </div>
         
        <hr
          aria-orientation="horizontal"
          class="v-divider v-divider--inset theme--light"
          role="separator"
        />
      </div>
      <div
        class="v-list indented v-sheet v-sheet--tile theme--light"
        role="list"
      >
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-git theme--light"
            />
          </div>
           
          <div
            class="v-list-item__content"
          >
            <div
              class="row no-gutters"
            >
              <div
                class="col col-2"
              >
                <span
                  class="text-center v-chip v-chip--no-color v-chip--outlined theme--light v-size--default"
                  tile=""
                >
                  <span
                    class="v-chip__content"
                  >
                    
      abce32
    
                  </span>
                </span>
              </div>
               
              <div
                class="ma-2 text-center col"
              >
                <span>
                  voldemort
                </span>
              </div>
               
              <div
                class="ma-2 text-center col"
              >
                <span>
                  voldemort@example.net
                </span>
              </div>
               
              <div
                class="ma-2 text-center col"
              >
                <span>
                  -
                </span>
              </div>
               
              <div
                class="ma-2 text-center col"
              >
                <span>
                  Git
                </span>
              </div>
            </div>
          </div>
        </div>
         
        <hr
          aria-orientation="horizontal"
          class="v-divider v-divider--inset theme--light"
          role="separator"
        />
      </div>
      <div
        class="v-list indented v-sheet v-sheet--tile theme--light"
        role="list"
      >
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-account-multiple theme--light"
            />
          </div>
           
          <div
            class="v-list-item__content"
          >
            <div
              class="row no-gutters"
            >
              <div
                class="col col-2"
              >
                <span
                  class="text-center v-chip v-chip--no-color v-chip--outlined theme--light v-size--default"
                  tile=""
                >
                  <span
                    class="v-chip__content"
                  >
                    
      4ce562
    
                  </span>
                </span>
              </div>
               
              <div
                class="ma-2 text-center col"
              >
                <span>
                  -
                </span>
              </div>
               
              <div
                class="ma-2 text-center col"
              >
                <span>
                  -
                </span>
              </div>
               
              <div
                class="ma-2 text-center col"
              >
                <span>
                  voldemort
                </span>
              </div>
               
              <div
                class="ma-2 text-center col"
              >
                <span>
                  irc
                </span>
              </div>
            </div>
          </div>
        </div>
         
        <!---->
      </div>
       
      <hr
        aria-orientation="horizontal"
        class="divider v-divider v-divider--inset theme--light"
        role="separator"
      />
       
      <div
        class="v-list v-sheet v-sheet--tile theme--light"
        role="list"
      >
        <div
          class="v-subheader theme--light"
        >
          Organizations (2)
        </div>
         
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__content"
          >
            <div
              class="row no-gutters"
            >
              <div
                class="ma-2 text-center col"
              >
                <span>
                  Slytherin
                </span>
              </div>
               
              <div
                class="col-3 ma-2 text-center col"
              >
                <span>
                  1938-09-01
                </span>
              </div>
               
              <div
                class="col-3 ma-2 text-center col"
              >
                <span>
                  1998-05-02
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__content"
          >
            <div
              class="row no-gutters"
            >
              <div
                class="ma-2 text-center col"
              >
                <span>
                  Hogwarts School of Witchcraft and Wizardry
                </span>
              </div>
               
              <div
                class="col-3 ma-2 text-center col"
              >
                <span>
                  1938-09-01
                </span>
              </div>
               
              <div
                class="col-3 ma-2 text-center col"
              >
                <span>
                  1945-06-02
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </td>
  </div>
</div>
`;

exports[`Storyshots ExpandedIndividual No Organizations 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <td
      colspan="3"
    >
      <div
        class="v-subheader theme--light"
      >
        Identities (1)
      </div>
       
      <div
        class="v-list indented v-sheet v-sheet--tile theme--light"
        role="list"
      >
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-git theme--light"
            />
          </div>
           
          <div
            class="v-list-item__content"
          >
            <div
              class="row no-gutters"
            >
              <div
                class="col col-2"
              >
                <span
                  class="text-center v-chip v-chip--no-color v-chip--outlined theme--light v-size--default"
                  tile=""
                >
                  <span
                    class="v-chip__content"
                  >
                    
      4ce562
    
                  </span>
                </span>
              </div>
               
              <div
                class="ma-2 text-center col"
              >
                <span>
                  Hagrid
                </span>
              </div>
               
              <div
                class="ma-2 text-center col"
              >
                <span>
                  hagrid@example.com
                </span>
              </div>
               
              <div
                class="ma-2 text-center col"
              >
                <span>
                  hagrid
                </span>
              </div>
               
              <div
                class="ma-2 text-center col"
              >
                <span>
                  Git
                </span>
              </div>
            </div>
          </div>
        </div>
         
        <!---->
      </div>
       
      <hr
        aria-orientation="horizontal"
        class="divider v-divider v-divider--inset theme--light"
        role="separator"
      />
       
      <div
        class="v-list v-sheet v-sheet--tile theme--light"
        role="list"
      >
        <div
          class="v-subheader theme--light"
        >
          Organizations (0)
        </div>
         
      </div>
    </td>
  </div>
</div>
`;

exports[`Storyshots Identity Default 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="row no-gutters"
    >
      <div
        class="col col-2"
      >
        <span
          class="text-center v-chip v-chip--no-color v-chip--outlined theme--light v-size--default"
          tile=""
        >
          <span
            class="v-chip__content"
          >
            
      10f546
    
          </span>
        </span>
      </div>
       
      <div
        class="ma-2 text-center col"
      >
        <span>
          Tom Marvolo Riddle
        </span>
      </div>
       
      <div
        class="ma-2 text-center col"
      >
        <span>
          triddle@example.net
        </span>
      </div>
       
      <div
        class="ma-2 text-center col"
      >
        <span>
          triddle
        </span>
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots Identity Source 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="row no-gutters"
    >
      <div
        class="col col-2"
      >
        <span
          class="text-center v-chip v-chip--no-color v-chip--outlined theme--light v-size--default"
          tile=""
        >
          <span
            class="v-chip__content"
          >
            
      10f546
    
          </span>
        </span>
      </div>
       
      <div
        class="ma-2 text-center col"
      >
        <span>
          Tom Marvolo Riddle
        </span>
      </div>
       
      <div
        class="ma-2 text-center col"
      >
        <span>
          triddle@example.net
        </span>
      </div>
       
      <div
        class="ma-2 text-center col"
      >
        <span>
          triddle
        </span>
      </div>
       
      <div
        class="ma-2 text-center col"
      >
        <span>
          github
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualCard Default 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="mx-auto v-card v-card--raised v-sheet theme--light"
    >
      <div
        class="grow v-list-item theme--light"
        tabindex="-1"
      >
        <div
          class="v-avatar v-list-item__avatar grey"
          style="height: 40px; min-width: 40px; width: 40px;"
        >
          
      TR
    
        </div>
         
        <div
          class="v-list-item__content"
        >
          <div
            class="v-list-item__title"
          >
            Tom Marvolo Riddle
          </div>
           
          <div
            class="v-list-item__subtitle"
          />
        </div>
         
        <div
          class="v-list-item__icon"
        >
          <button
            class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
                style="font-size: 16px;"
              />
            </span>
          </button>
        </div>
      </div>
        
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualCard Locked 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="mx-auto v-card v-card--raised v-sheet theme--light"
    >
      <div
        class="grow v-list-item theme--light"
        tabindex="-1"
      >
        <div
          class="v-avatar v-list-item__avatar grey"
          style="height: 40px; min-width: 40px; width: 40px;"
        >
          
      TR
    
        </div>
         
        <div
          class="v-list-item__content"
        >
          <div
            class="v-list-item__title"
          >
            Tom Marvolo Riddle
          </div>
           
          <div
            class="v-list-item__subtitle"
          />
        </div>
         
        <div
          class="v-list-item__icon"
        >
          <button
            class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-lock theme--light"
                style="font-size: 16px;"
              />
            </span>
          </button>
        </div>
      </div>
        
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualCard Single Initial 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="mx-auto v-card v-card--raised v-sheet theme--light"
    >
      <div
        class="grow v-list-item theme--light"
        tabindex="-1"
      >
        <div
          class="v-avatar v-list-item__avatar grey"
          style="height: 40px; min-width: 40px; width: 40px;"
        >
          
      V
    
        </div>
         
        <div
          class="v-list-item__content"
        >
          <div
            class="v-list-item__title"
          >
            Voldemort
          </div>
           
          <div
            class="v-list-item__subtitle"
          />
        </div>
         
        <div
          class="v-list-item__icon"
        >
          <button
            class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
                style="font-size: 16px;"
              />
            </span>
          </button>
        </div>
      </div>
        
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualCard Sources 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="mx-auto v-card v-card--raised v-sheet theme--light"
    >
      <div
        class="grow v-list-item theme--light"
        tabindex="-1"
      >
        <div
          class="v-avatar v-list-item__avatar grey"
          style="height: 40px; min-width: 40px; width: 40px;"
        >
          
      TR
    
        </div>
         
        <div
          class="v-list-item__content"
        >
          <div
            class="v-list-item__title"
          >
            Tom Marvolo Riddle
          </div>
           
          <div
            class="v-list-item__subtitle"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-git theme--light"
              style="font-size: 16px;"
            />
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-github theme--light"
              style="font-size: 16px;"
            />
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-gitlab theme--light"
              style="font-size: 16px;"
            />
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-account-multiple theme--light"
              style="font-size: 16px;"
            />
          </div>
        </div>
         
        <div
          class="v-list-item__icon"
        >
          <button
            class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
                style="font-size: 16px;"
              />
            </span>
          </button>
        </div>
      </div>
        
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualEntry Bot 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="v-data-table theme--light"
    >
      <div
        class="v-data-table__wrapper"
      >
        <table>
          <colgroup>
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
          </colgroup>
          <tbody>
            <tr
              class=""
              uuid="03b3428ee"
            >
              <td
                width="25%"
              >
                <div
                  class="v-list-item theme--light"
                  tabindex="-1"
                >
                  <div
                    class="v-avatar v-list-item__avatar grey"
                    style="height: 40px; min-width: 40px; width: 40px;"
                  >
                    
        TR
      
                  </div>
                   
                  <div
                    class="v-list-item__content"
                  >
                    <div
                      class="v-list-item__title"
                    >
                      
          Tom Marvolo Riddle
          
                      <span
                        class="v-tooltip v-tooltip--bottom"
                      >
                        <!---->
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate aligned v-icon--right mdi mdi-robot theme--light"
                          style="font-size: 16px;"
                        />
                      </span>
                       
                      <!---->
                    </div>
                     
                    <div
                      class="v-list-item__subtitle"
                    >
                      Slytherin
                    </div>
                  </div>
                </div>
              </td>
               
              <td
                class="text-center"
              >
                
    triddle@example.com
  
              </td>
               
              <td
                class="text-right"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-git theme--light"
                />
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-account-multiple theme--light"
                />
              </td>
               
              <td
                width="140"
              >
                <span
                  class="v-tooltip v-tooltip--bottom"
                >
                  <!---->
                  <button
                    class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-pin theme--light"
                      />
                    </span>
                  </button>
                </span>
                 
                <button
                  class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-chevron-down theme--light"
                    />
                  </span>
                </button>
                 
                <span
                  class="v-tooltip v-tooltip--bottom"
                >
                  <!---->
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate mdi mdi-drag-vertical theme--light"
                    style="cursor: pointer;"
                  />
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualEntry Bot And Locked 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="v-data-table theme--light"
    >
      <div
        class="v-data-table__wrapper"
      >
        <table>
          <colgroup>
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
          </colgroup>
          <tbody>
            <tr
              class=""
              uuid="03b3428ee"
            >
              <td
                width="25%"
              >
                <div
                  class="v-list-item theme--light"
                  tabindex="-1"
                >
                  <div
                    class="v-avatar v-list-item__avatar grey"
                    style="height: 40px; min-width: 40px; width: 40px;"
                  >
                    
        TR
      
                  </div>
                   
                  <div
                    class="v-list-item__content"
                  >
                    <div
                      class="v-list-item__title"
                    >
                      
          Tom Marvolo Riddle
          
                      <span
                        class="v-tooltip v-tooltip--bottom"
                      >
                        <!---->
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate aligned v-icon--right mdi mdi-robot theme--light"
                          style="font-size: 16px;"
                        />
                      </span>
                       
                      <span
                        class="v-tooltip v-tooltip--bottom"
                      >
                        <!---->
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate aligned v-icon--right mdi mdi-lock theme--light"
                          style="font-size: 16px;"
                        />
                      </span>
                    </div>
                     
                    <div
                      class="v-list-item__subtitle"
                    >
                      Slytherin
                    </div>
                  </div>
                </div>
              </td>
               
              <td
                class="text-center"
              >
                
    triddle@example.com
  
              </td>
               
              <td
                class="text-right"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-git theme--light"
                />
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-account-multiple theme--light"
                />
              </td>
               
              <td
                width="140"
              >
                <span
                  class="v-tooltip v-tooltip--bottom"
                >
                  <!---->
                  <button
                    class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-pin theme--light"
                      />
                    </span>
                  </button>
                </span>
                 
                <button
                  class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-chevron-down theme--light"
                    />
                  </span>
                </button>
                 
                <span
                  class="v-tooltip v-tooltip--bottom"
                >
                  <!---->
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate mdi mdi-drag-vertical theme--light"
                    style="cursor: pointer;"
                  />
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualEntry Default 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="v-data-table theme--light"
    >
      <div
        class="v-data-table__wrapper"
      >
        <table>
          <colgroup>
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
          </colgroup>
          <tbody>
            <tr
              class=""
              uuid="03b3428ee"
            >
              <td
                width="25%"
              >
                <div
                  class="v-list-item theme--light"
                  tabindex="-1"
                >
                  <div
                    class="v-avatar v-list-item__avatar grey"
                    style="height: 40px; min-width: 40px; width: 40px;"
                  >
                    
        TR
      
                  </div>
                   
                  <div
                    class="v-list-item__content"
                  >
                    <div
                      class="v-list-item__title"
                    >
                      
          Tom Marvolo Riddle
          
                      <!---->
                       
                      <!---->
                    </div>
                     
                    <div
                      class="v-list-item__subtitle"
                    >
                      Slytherin
                    </div>
                  </div>
                </div>
              </td>
               
              <td
                class="text-center"
              >
                
    triddle@example.com
  
              </td>
               
              <td
                class="text-right"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-git theme--light"
                />
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-account-multiple theme--light"
                />
              </td>
               
              <td
                width="140"
              >
                <span
                  class="v-tooltip v-tooltip--bottom"
                >
                  <!---->
                  <button
                    class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-pin theme--light"
                      />
                    </span>
                  </button>
                </span>
                 
                <button
                  class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-chevron-down theme--light"
                    />
                  </span>
                </button>
                 
                <span
                  class="v-tooltip v-tooltip--bottom"
                >
                  <!---->
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate mdi mdi-drag-vertical theme--light"
                    style="cursor: pointer;"
                  />
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualEntry Locked 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="v-data-table theme--light"
    >
      <div
        class="v-data-table__wrapper"
      >
        <table>
          <colgroup>
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
          </colgroup>
          <tbody>
            <tr
              class=""
              uuid="03b3428ee"
            >
              <td
                width="25%"
              >
                <div
                  class="v-list-item theme--light"
                  tabindex="-1"
                >
                  <div
                    class="v-avatar v-list-item__avatar grey"
                    style="height: 40px; min-width: 40px; width: 40px;"
                  >
                    
        TR
      
                  </div>
                   
                  <div
                    class="v-list-item__content"
                  >
                    <div
                      class="v-list-item__title"
                    >
                      
          Tom Marvolo Riddle
          
                      <!---->
                       
                      <span
                        class="v-tooltip v-tooltip--bottom"
                      >
                        <!---->
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate aligned v-icon--right mdi mdi-lock theme--light"
                          style="font-size: 16px;"
                        />
                      </span>
                    </div>
                     
                    <div
                      class="v-list-item__subtitle"
                    >
                      Slytherin
                    </div>
                  </div>
                </div>
              </td>
               
              <td
                class="text-center"
              >
                
    triddle@example.com
  
              </td>
               
              <td
                class="text-right"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-git theme--light"
                />
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-account-multiple theme--light"
                />
              </td>
               
              <td
                width="140"
              >
                <span
                  class="v-tooltip v-tooltip--bottom"
                >
                  <!---->
                  <button
                    class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-pin theme--light"
                      />
                    </span>
                  </button>
                </span>
                 
                <button
                  class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-chevron-down theme--light"
                    />
                  </span>
                </button>
                 
                <span
                  class="v-tooltip v-tooltip--bottom"
                >
                  <!---->
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate mdi mdi-drag-vertical theme--light"
                    style="cursor: pointer;"
                  />
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualEntry No Email 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="v-data-table theme--light"
    >
      <div
        class="v-data-table__wrapper"
      >
        <table>
          <colgroup>
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
          </colgroup>
          <tbody>
            <tr
              class=""
              uuid="03b3428ee"
            >
              <td
                width="25%"
              >
                <div
                  class="v-list-item theme--light"
                  tabindex="-1"
                >
                  <div
                    class="v-avatar v-list-item__avatar grey"
                    style="height: 40px; min-width: 40px; width: 40px;"
                  >
                    
        TR
      
                  </div>
                   
                  <div
                    class="v-list-item__content"
                  >
                    <div
                      class="v-list-item__title"
                    >
                      
          Tom Marvolo Riddle
          
                      <!---->
                       
                      <!---->
                    </div>
                     
                    <div
                      class="v-list-item__subtitle"
                    >
                      Slytherin
                    </div>
                  </div>
                </div>
              </td>
               
              <td
                class="text-center"
              >
                
    
  
              </td>
               
              <td
                class="text-right"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-git theme--light"
                />
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-account-multiple theme--light"
                />
              </td>
               
              <td
                width="140"
              >
                <span
                  class="v-tooltip v-tooltip--bottom"
                >
                  <!---->
                  <button
                    class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-pin theme--light"
                      />
                    </span>
                  </button>
                </span>
                 
                <button
                  class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-chevron-down theme--light"
                    />
                  </span>
                </button>
                 
                <span
                  class="v-tooltip v-tooltip--bottom"
                >
                  <!---->
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate mdi mdi-drag-vertical theme--light"
                    style="cursor: pointer;"
                  />
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualEntry No Organization 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="v-data-table theme--light"
    >
      <div
        class="v-data-table__wrapper"
      >
        <table>
          <colgroup>
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
          </colgroup>
          <tbody>
            <tr
              class=""
              uuid="03b3428ee"
            >
              <td
                width="25%"
              >
                <div
                  class="v-list-item theme--light"
                  tabindex="-1"
                >
                  <div
                    class="v-avatar v-list-item__avatar grey"
                    style="height: 40px; min-width: 40px; width: 40px;"
                  >
                    
        TR
      
                  </div>
                   
                  <div
                    class="v-list-item__content"
                  >
                    <div
                      class="v-list-item__title"
                    >
                      
          Tom Marvolo Riddle
          
                      <!---->
                       
                      <!---->
                    </div>
                     
                    <div
                      class="v-list-item__subtitle"
                    >
                      
                    </div>
                  </div>
                </div>
              </td>
               
              <td
                class="text-center"
              >
                
    triddle@example.com
  
              </td>
               
              <td
                class="text-right"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-git theme--light"
                />
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-account-multiple theme--light"
                />
              </td>
               
              <td
                width="140"
              >
                <span
                  class="v-tooltip v-tooltip--bottom"
                >
                  <!---->
                  <button
                    class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-pin theme--light"
                      />
                    </span>
                  </button>
                </span>
                 
                <button
                  class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-chevron-down theme--light"
                    />
                  </span>
                </button>
                 
                <span
                  class="v-tooltip v-tooltip--bottom"
                >
                  <!---->
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate mdi mdi-drag-vertical theme--light"
                    style="cursor: pointer;"
                  />
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualEntry Single Inital 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="v-data-table theme--light"
    >
      <div
        class="v-data-table__wrapper"
      >
        <table>
          <colgroup>
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
          </colgroup>
          <tbody>
            <tr
              class=""
              uuid="03b3428ee"
            >
              <td
                width="25%"
              >
                <div
                  class="v-list-item theme--light"
                  tabindex="-1"
                >
                  <div
                    class="v-avatar v-list-item__avatar grey"
                    style="height: 40px; min-width: 40px; width: 40px;"
                  >
                    
        V
      
                  </div>
                   
                  <div
                    class="v-list-item__content"
                  >
                    <div
                      class="v-list-item__title"
                    >
                      
          Voldemort
          
                      <!---->
                       
                      <!---->
                    </div>
                     
                    <div
                      class="v-list-item__subtitle"
                    >
                      Death Eaters
                    </div>
                  </div>
                </div>
              </td>
               
              <td
                class="text-center"
              >
                
    lord.voldemort@example.com
  
              </td>
               
              <td
                class="text-right"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-git theme--light"
                />
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-account-multiple theme--light"
                />
              </td>
               
              <td
                width="140"
              >
                <span
                  class="v-tooltip v-tooltip--bottom"
                >
                  <!---->
                  <button
                    class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-pin theme--light"
                      />
                    </span>
                  </button>
                </span>
                 
                <button
                  class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-chevron-down theme--light"
                    />
                  </span>
                </button>
                 
                <span
                  class="v-tooltip v-tooltip--bottom"
                >
                  <!---->
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate mdi mdi-drag-vertical theme--light"
                    style="cursor: pointer;"
                  />
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualsGrid Default 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="v-card v-sheet theme--light"
      style="max-width: 750px;"
    >
      <div
        class="container container--fluid"
      >
        <div
          class="row row--dense"
        >
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--link v-card--raised v-sheet theme--light"
              tabindex="0"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      TR
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Tom Marvolo Riddle
                  </div>
                   
                  <div
                    class="v-list-item__subtitle"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-gitlab theme--light"
                      style="font-size: 16px;"
                    />
                  </div>
                </div>
                 
                <div
                  class="v-list-item__icon"
                >
                  <button
                    class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-lock theme--light"
                        style="font-size: 16px;"
                      />
                    </span>
                  </button>
                </div>
              </div>
                
              <!---->
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--link v-card--raised v-sheet theme--light"
              tabindex="0"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      HP
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Harry Potter
                  </div>
                   
                  <div
                    class="v-list-item__subtitle"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-github theme--light"
                      style="font-size: 16px;"
                    />
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-git theme--light"
                      style="font-size: 16px;"
                    />
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-account-multiple theme--light"
                      style="font-size: 16px;"
                    />
                  </div>
                </div>
                 
                <div
                  class="v-list-item__icon"
                >
                  <button
                    class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
                        style="font-size: 16px;"
                      />
                    </span>
                  </button>
                </div>
              </div>
                
              <!---->
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--link v-card--raised v-sheet theme--light"
              tabindex="0"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      V
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Voldemort
                  </div>
                   
                  <div
                    class="v-list-item__subtitle"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-gitlab theme--light"
                      style="font-size: 16px;"
                    />
                  </div>
                </div>
                 
                <div
                  class="v-list-item__icon"
                >
                  <button
                    class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
                        style="font-size: 16px;"
                      />
                    </span>
                  </button>
                </div>
              </div>
                
              <!---->
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--link v-card--raised v-sheet theme--light"
              tabindex="0"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      HG
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Hermione Granger
                  </div>
                   
                  <div
                    class="v-list-item__subtitle"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-github theme--light"
                      style="font-size: 16px;"
                    />
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-git theme--light"
                      style="font-size: 16px;"
                    />
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-account-multiple theme--light"
                      style="font-size: 16px;"
                    />
                  </div>
                </div>
                 
                <div
                  class="v-list-item__icon"
                >
                  <button
                    class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
                        style="font-size: 16px;"
                      />
                    </span>
                  </button>
                </div>
              </div>
                
              <!---->
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--link v-card--raised v-sheet theme--light"
              tabindex="0"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      AD
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Ambus Dumbledore
                  </div>
                   
                  <div
                    class="v-list-item__subtitle"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-github theme--light"
                      style="font-size: 16px;"
                    />
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-git theme--light"
                      style="font-size: 16px;"
                    />
                  </div>
                </div>
                 
                <div
                  class="v-list-item__icon"
                >
                  <button
                    class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
                        style="font-size: 16px;"
                      />
                    </span>
                  </button>
                </div>
              </div>
                
              <!---->
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--link v-card--raised v-sheet theme--light"
              tabindex="0"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      RW
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Ron Weasley
                  </div>
                   
                  <div
                    class="v-list-item__subtitle"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-github theme--light"
                      style="font-size: 16px;"
                    />
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-git theme--light"
                      style="font-size: 16px;"
                    />
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-account-multiple theme--light"
                      style="font-size: 16px;"
                    />
                  </div>
                </div>
                 
                <div
                  class="v-list-item__icon"
                >
                  <button
                    class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
                        style="font-size: 16px;"
                      />
                    </span>
                  </button>
                </div>
              </div>
                
              <!---->
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--link v-card--raised v-sheet theme--light"
              tabindex="0"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      SS
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Severus Snape
                  </div>
                   
                  <div
                    class="v-list-item__subtitle"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-gitlab theme--light"
                      style="font-size: 16px;"
                    />
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-github theme--light"
                      style="font-size: 16px;"
                    />
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-git theme--light"
                      style="font-size: 16px;"
                    />
                  </div>
                </div>
                 
                <div
                  class="v-list-item__icon"
                >
                  <button
                    class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
                        style="font-size: 16px;"
                      />
                    </span>
                  </button>
                </div>
              </div>
                
              <!---->
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--link v-card--raised v-sheet theme--light"
              tabindex="0"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      H
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Hagrid
                  </div>
                   
                  <div
                    class="v-list-item__subtitle"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-git theme--light"
                      style="font-size: 16px;"
                    />
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-account-multiple theme--light"
                      style="font-size: 16px;"
                    />
                  </div>
                </div>
                 
                <div
                  class="v-list-item__icon"
                >
                  <button
                    class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
                        style="font-size: 16px;"
                      />
                    </span>
                  </button>
                </div>
              </div>
                
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualsGrid Empty 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="v-card v-sheet theme--light"
      style="max-width: 750px;"
    >
      <div
        class="v-card__text"
      >
        No individuals found
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualsTable Default 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="container"
    >
      <div
        class="v-data-table theme--light"
      >
        <div
          class="v-data-table__wrapper"
        >
          <table>
            <colgroup>
              <col
                class=""
              />
              <col
                class=""
              />
              <col
                class=""
              />
              <col
                class=""
              />
            </colgroup>
            <tbody>
              <tr
                class="v-data-table__empty-wrapper"
              >
                <td
                  colspan="4"
                >
                  No data available
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
       
      <div
        class="text-center pt-2"
      >
        <ul
          class="v-pagination theme--light"
        >
          <li>
            <button
              class="v-pagination__navigation v-pagination__navigation--disabled"
              type="button"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-chevron-left theme--light"
              />
            </button>
          </li>
          <li>
            <button
              class="v-pagination__navigation v-pagination__navigation--disabled"
              type="button"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-chevron-right theme--light"
              />
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots OrganizationEntry Default 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="v-data-table theme--light"
    >
      <div
        class="v-data-table__wrapper"
      >
        <table>
          <colgroup>
            <col
              class=""
            />
            <col
              class=""
            />
          </colgroup>
          <tbody>
            <tr>
              <td
                class="text--body-1"
              >
                Hogwarts School of Witchcraft and Wizardry
              </td>
               
              <td
                class="text-right text--secondary"
              >
                280
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ProfileCard Default 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="mx-auto v-card v-card--raised v-sheet theme--light"
      style="width: 600px;"
    >
      <div
        class="grow v-list-item theme--light"
        tabindex="-1"
      >
        <div
          class="v-avatar v-list-item__avatar grey"
          style="height: 40px; min-width: 40px; width: 40px;"
        >
          
      TR
    
        </div>
         
        <div
          class="v-list-item__content"
        >
          <div
            class="v-list-item__title"
          >
            Tom Marvolo Riddle
          </div>
           
          <div
            class="v-list-item__subtitle"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-github theme--light"
              style="font-size: 16px;"
            />
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-git theme--light"
              style="font-size: 16px;"
            />
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-account-multiple theme--light"
              style="font-size: 16px;"
            />
          </div>
        </div>
         
        <div
          class="v-list-item__icon"
        >
          <button
            class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
                style="font-size: 16px;"
              />
            </span>
          </button>
        </div>
      </div>
       
      <div
        class="v-list-group"
      >
        <div
          aria-expanded="false"
          class="v-list-group__header v-list-item v-list-item--link theme--light"
          role="button"
          tabindex="0"
        >
          <div
            class="v-list-item__title"
          >
            
        Identities (4)
      
          </div>
          <div
            class="v-list-item__icon v-list-group__header__append-icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-chevron-down theme--light"
            />
          </div>
        </div>
        <!---->
      </div>
       
      <div
        class="v-list-group"
      >
        <div
          aria-expanded="false"
          class="v-list-group__header v-list-item v-list-item--link theme--light"
          role="button"
          tabindex="0"
        >
          <div
            class="v-list-item__content"
          >
            <div
              class="v-list-item__title"
            >
              
          Organizations (2)
        
            </div>
          </div>
          <div
            class="v-list-item__icon v-list-group__header__append-icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-chevron-down theme--light"
            />
          </div>
        </div>
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots WorkSpace Default 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="pa-md-4 v-sheet theme--light grey lighten-5"
    >
      <div
        class="row ma-md-0 pt-md-4 pl-md-4 pr-md-4 justify-space-between"
      >
        <h3
          class="text-h3"
        >
          Work Space
        </h3>
         
        <span
          class="v-tooltip v-tooltip--left"
        >
          <!---->
          <button
            class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-delete-sweep theme--light"
              />
            </span>
          </button>
        </span>
      </div>
       
      <div
        class="row pa-md-4 ma-md-0 drag-zone row--dense"
      >
        <div
          class="col col-2"
        >
          <div
            class="mx-auto v-card v-card--raised v-sheet theme--light"
          >
            <div
              class="grow v-list-item theme--light"
              tabindex="-1"
            >
              <div
                class="v-avatar v-list-item__avatar grey"
                style="height: 40px; min-width: 40px; width: 40px;"
              >
                
      TR
    
              </div>
               
              <div
                class="v-list-item__content"
              >
                <div
                  class="v-list-item__title"
                >
                  Tom Marvolo Riddle
                </div>
                 
                <div
                  class="v-list-item__subtitle"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate mdi mdi-gitlab theme--light"
                    style="font-size: 16px;"
                  />
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate mdi mdi-github theme--light"
                    style="font-size: 16px;"
                  />
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate mdi mdi-git theme--light"
                    style="font-size: 16px;"
                  />
                </div>
              </div>
               
              <div
                class="v-list-item__icon"
              >
                <button
                  class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
                      style="font-size: 16px;"
                    />
                  </span>
                </button>
              </div>
            </div>
              
            <!---->
          </div>
        </div>
        <div
          class="col col-2"
        >
          <div
            class="mx-auto v-card v-card--raised v-sheet theme--light"
          >
            <div
              class="grow v-list-item theme--light"
              tabindex="-1"
            >
              <div
                class="v-avatar v-list-item__avatar grey"
                style="height: 40px; min-width: 40px; width: 40px;"
              >
                
      HP
    
              </div>
               
              <div
                class="v-list-item__content"
              >
                <div
                  class="v-list-item__title"
                >
                  Harry Potter
                </div>
                 
                <div
                  class="v-list-item__subtitle"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate mdi mdi-github theme--light"
                    style="font-size: 16px;"
                  />
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate mdi mdi-git theme--light"
                    style="font-size: 16px;"
                  />
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate mdi mdi-account-multiple theme--light"
                    style="font-size: 16px;"
                  />
                </div>
              </div>
               
              <div
                class="v-list-item__icon"
              >
                <button
                  class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
                      style="font-size: 16px;"
                    />
                  </span>
                </button>
              </div>
            </div>
              
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots WorkSpace Drag And Drop 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div>
      <div
        class="pa-md-4 v-sheet theme--light grey lighten-5"
      >
        <div
          class="row ma-md-0 pt-md-4 pl-md-4 pr-md-4 justify-space-between"
        >
          <h3
            class="text-h3"
          >
            Work Space
          </h3>
           
          <span
            class="v-tooltip v-tooltip--left"
          >
            <!---->
            <button
              class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
              disabled="disabled"
              type="button"
            >
              <span
                class="v-btn__content"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate mdi mdi-delete-sweep theme--light"
                />
              </span>
            </button>
          </span>
        </div>
         
        <p
          class="text--disabled pa-md-4 drag-zone"
        >
          
    Save individuals in your work space to perform actions on them.
  
        </p>
         
        <!---->
      </div>
       
      <div
        class="container"
      >
        <div
          class="v-data-table theme--light"
        >
          <div
            class="v-data-table__wrapper"
          >
            <table>
              <colgroup>
                <col
                  class=""
                />
                <col
                  class=""
                />
                <col
                  class=""
                />
                <col
                  class=""
                />
              </colgroup>
              <tbody>
                <tr
                  class="v-data-table__empty-wrapper"
                >
                  <td
                    colspan="4"
                  >
                    No data available
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
         
        <div
          class="text-center pt-2"
        >
          <ul
            class="v-pagination theme--light"
          >
            <li>
              <button
                class="v-pagination__navigation v-pagination__navigation--disabled"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate mdi mdi-chevron-left theme--light"
                />
              </button>
            </li>
            <li>
              <button
                class="v-pagination__navigation v-pagination__navigation--disabled"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate mdi mdi-chevron-right theme--light"
                />
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots WorkSpace Empty 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="pa-md-4 v-sheet theme--light grey lighten-5"
    >
      <div
        class="row ma-md-0 pt-md-4 pl-md-4 pr-md-4 justify-space-between"
      >
        <h3
          class="text-h3"
        >
          Work Space
        </h3>
         
        <span
          class="v-tooltip v-tooltip--left"
        >
          <!---->
          <button
            class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
            disabled="disabled"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-delete-sweep theme--light"
              />
            </span>
          </button>
        </span>
      </div>
       
      <p
        class="text--disabled pa-md-4 drag-zone"
      >
        
    Save individuals in your work space to perform actions on them.
  
      </p>
       
      <!---->
    </div>
  </div>
</div>
`;
